feat: update layout dimensions to use dynamic viewport height for improved responsiveness

--- a/src/app/pages/profile/profile-header/profile-header.component.html
+++ b/src/app/pages/profile/profile-header/profile-header.component.html
@@ -40,9 +40,7 @@
             }
 
             @if (!isCompactHeader() && profile.content.about) {
-            <div class="profile-bio">
-                {{ profile.content.about }}
-            </div>
+            <div class="profile-bio">{{ profile.content.about }}</div>
             }
 
             <mat-menu #profileMenu="matMenu">
