--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,7 +18,7 @@ nav {
 .app-container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100dvh;
   overflow: hidden;
   width: 100%; /* Ensure it takes full width */
   position: relative;
