--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -296,7 +296,7 @@
   // margin-top: 4rem;
   // padding: 0 1rem;
   clear: both; /* Ensure content stays below the profile section */
-  height: calc(100vh - 240px);
+  height: calc(100dvh - 240px);
   border: 1px solid blue;
 
 
