--- a/src/styles.scss
+++ b/src/styles.scss
@@ -144,7 +144,7 @@ a:hover {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  height: 100vh;
+  height: 100dvh;
   transition: background-color 0.3s ease;
 }
 
