--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -18,7 +18,7 @@
     </div>
     }
 
-    <app-profile-header [profile]="profile"></app-profile-header>
+    <app-profile-header [profile]="profile" [compact]="isCompactHeader()"></app-profile-header>
 
     <!-- <div class="profile-avatar-container" [class.compact]="isCompactHeader()">
       <div class="profile-avatar" [class.clickable]="profile.content.picture"
