--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -169,7 +169,7 @@
     }
   </div>
 
-  <div class="profile-outlet">
+  <div class="profile-outlet"  [class.mobile]="layoutService.isHandset()">
     <router-outlet></router-outlet>
   </div>
   } @else {
